watch web updated

--- a/product.html
+++ b/product.html
@@ -64,8 +64,8 @@
       <hr />
       <nav>
         <ul>
-          <li>Categories</li>
-          <li><a id="male-link">Male</a></li>
+       
+          <li><a id="male-link">Weekly_Offers</a></li>
           <li><a id="female-link">Female</a></li>
           <li><a id="smart-link">Smart</a></li>
           <li><a id="sports-link">Sports</a></li>
@@ -78,7 +78,7 @@
     <main>
       <!-- weekly offers -->
       <div class="mainContainer">
-        <h2 style="text-align: center; padding: 15px">Weekly Offers</h2>
+        <h2 a id="Weekly_Offers">Weekly Offers</h2>
         <div class="flexContainer">
           <div class="card">
             <div class="cardImage">
