Update watch web code

--- a/product.html
+++ b/product.html
@@ -46,7 +46,7 @@
       </div>
       <nav>
         <div class="lo">
-          <img src="images/LOGO.jpg" alt="LOGO" width="auto" height="10" />
+          <img src="images/LOGO.jpg" alt="LOGO" width="auto" height="50" />
         </div>
         <ul>
           <li><a class="activeLink" href="home.html">Home</a></li>
@@ -64,11 +64,10 @@
       <hr />
       <nav>
         <ul>
-       
-          <li><a id="male-link">Weekly_Offers</a></li>
-          <li><a id="female-link">Female</a></li>
-          <li><a id="smart-link">Smart</a></li>
-          <li><a id="sports-link">Sports</a></li>
+          <li><a href="#Weekly_Offers">Weekly Offers</a></li>
+          <li><a href="#Best_Sellers">Best Sellers</a></li>
+          <li><a href="#Limited_Watches">Limited Watches</a></li>
+          <li><a href="#New_Drops">New Drops</a></li>
         </ul>
       </nav>
     </header>
@@ -77,8 +76,8 @@
     <!-- main body starts here  -->
     <main>
       <!-- weekly offers -->
-      <div class="mainContainer">
-        <h2 a id="Weekly_Offers">Weekly Offers</h2>
+      <div class="mainContainer" id="Weekly_Offers">
+        <h2 style="text-align: center; padding: 15px">Weekly Offers</h2>
         <div class="flexContainer">
           <div class="card">
             <div class="cardImage">
@@ -157,7 +156,7 @@
         </div>
       </div>
 
-      <div class="mainContainer">
+      <div class="mainContainer" id="Best_Sellers">
         <h2 style="text-align: center; padding: 15px">Best Sellers</h2>
         <div class="flexContainer">
           <div class="card">
@@ -237,7 +236,7 @@
         </div>
       </div>
 
-      <div class="mainContainer">
+      <div class="mainContainer" id="Limited_Watches">
         <h2 style="text-align: center; padding: 15px">Limited Watches</h2>
         <div class="flexContainer">
           <div class="card">
@@ -287,7 +286,7 @@
 
           <div class="card">
             <div class="cardImage">
-              <img src="images/w11.jpg "alt="" />
+              <img src="images/w11.jpg " alt="" />
             </div>
             <div class="cardTitle">
               <h4>Lige men's watch</h4>
@@ -317,7 +316,7 @@
         </div>
       </div>
 
-      <div class="mainContainer">
+      <div class="mainContainer" id="New_Drops">
         <h2 style="text-align: center; padding: 15px">New Drops</h2>
         <div style="margin-bottom: 20px" class="flexContainer">
           <div class="card">
